--- a/admin/components/about/skills-list/style.scss
+++ b/admin/components/about/skills-list/style.scss
@@ -1,8 +1,23 @@
-
+.skills-type-header{
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #edf4f6;
+}
 .skills-title{
     font-family: "Roboto-Medium";
     color: $gray;
-    margin-bottom: 10px;
+}
+.skill-remove{
+    margin-left: auto;
+}
+.skill-table{
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #edf4f6;
+    padding: 10px 0;
+    width: 100%;
+    border-spacing: 0;
 }
 .input-skill-name{
     padding:10px;
@@ -22,7 +37,10 @@
 }
 
 .buttons{
-   margin-bottom: 30px; 
+    width: 100%;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+    margin-bottom: 30px; 
 }
 .error{
     border: 1px solid red;
