--- a/admin/components/about/style.scss
+++ b/admin/components/about/style.scss
@@ -1,10 +1,12 @@
 .about{
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 .about-content{
     display: flex;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 .skills-list{
     width: 40%;
