--- a/admin/components/about/style.scss
+++ b/admin/components/about/style.scss
@@ -13,3 +13,15 @@
     margin-right: 10%;
     margin-bottom: 50px;
 }
+.buttons-add-group{
+   width: 100%;
+}
+.add-name-title{
+    width: 20%;
+}
+.add-name-input{
+    width: 80%;
+}
+.input-skill-type-name, .add-group-btn{
+    width: 100%;
+}
