--- a/admin/app.scss
+++ b/admin/app.scss
@@ -8,6 +8,7 @@
   flex: 1; 
   background: url('~img/bg.jpg') center center no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   padding: 40px 30px;
   display: flex;
   flex-direction: column;
