--- a/admin/components/works/style.scss
+++ b/admin/components/works/style.scss
@@ -1,42 +1,18 @@
-.works{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    flex-grow: 1;
+.table-works{
+    width: 100%;
+    margin-top: 30px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    th {
+        padding: 10px;
+        background: $green;
+        color: #fff;
+        border: 1px solid #ccc;
+        font-family: 'Robobto-Bold', sans-serif;
+    }
+    td {
+        border: 1px solid #ccc;
+        padding: 5px;
+    }
 }
-.upload-icon{
-    width: 30px;
-    height: 30px;
-    background: svg('~img/img-icon.svg', $green);
-    background-size: 100%;
-}
-.upload {
-    display: inline-flex;
-    align-items: center;  
-    cursor: pointer;
-}
-  
-.upload__text {
-    color: rgba($green, 0.7);
-    margin-top: -8px;
-    margin-left: 12px;
-}
-form{
-    display: flex;
-    flex-direction: column;  
-}
-.button{
-    align-self: flex-start;
-}
-.input{
-    margin-bottom: 20px;
-    max-width: 300px;
-}
-.input-file{
-    position: absolute;
-    visibility: hidden;
-    height: 0;
-}
-.error-message{
-    margin-top: 10px;
-}
+
